--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -138,34 +138,34 @@
               </div>
             </li>
             <li routerLink="/our-theme" >
-              <a class="act casino" >Our Theme</a>
+              <a class="act casino" >Our Work</a>
              </li>
-            <li><a class="act" routerLink="/FAQ">Faq</a></li>
+            <li><a class="act" routerLink="/FAQ">FAQs</a></li>
             <li><a class="act" routerLink="/contact">Contact Us</a></li>
           </ul>
           </div>
         </div>
         <div class="nav_col_3" >
           <a target="_blank" href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/"
-          style="color: black;" aria-label="Visit Facebook Profile">
+          style="color: rgb(136, 130, 130);" aria-label="Visit Facebook Profile">
           <i class="fa-brands fa-facebook-f"></i>
        </a>
           <a target="_blank" href="https://t.me/Johnmark1974
 
 
 
-          " style="color: black;" aria-label="Visit telegram Profile"><i
+          " style="color: rgb(136, 130, 130);" aria-label="Visit telegram Profile"><i
               class="fa-brands fa-telegram"></i></a>
 
               <a target="_blank" href="https://twitter.com/VRNLOFFICIAL
-          " style="color: black;" aria-label="Visit Twitter Profile"><i
+          " style="color: rgb(136, 130, 130);" aria-label="Visit Twitter Profile"><i
               class="fa-brands fa-twitter"></i></a>
           <a target="_blank"
             href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0"
-            style="color: black;" aria-label="Visit whatsapp Profile"><i class="fa-brands fa-whatsapp"></i></a>
-          <a target="_blank" href="skype:live:9960f32f776599a2?chat" style="color: black;" aria-label="Visit skype Profile"> <i
+            style="color: rgb(136, 130, 130);" aria-label="Visit whatsapp Profile"><i class="fa-brands fa-whatsapp"></i></a>
+          <a target="_blank" href="skype:live:9960f32f776599a2?chat" style="color: rgb(136, 130, 130);" aria-label="Visit skype Profile"> <i
               class="fa-brands fa-skype"></i></a>
-          <a target="_blank" href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D" style="color: black;" aria-label="Visit instagram Profile"> <i
+          <a target="_blank" href="https://www.instagram.com/vrnl_official/?igshid=NzZhOTFlYzFmZQ%3D%3D" style="color: rgb(136, 130, 130);" aria-label="Visit instagram Profile"> <i
               class="fa-brands fa-instagram"></i></a>
                
               <!-- <div  id="google_translate_element"></div> -->
@@ -336,7 +336,7 @@
             <h2 class="accordion-header" id="flush-headingseven">
               <button class="accord_btn collapsed" type="" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseseven" aria-expanded="false" aria-controls="flush-collapseseven">
-                <a href="#"> Our Theme</a>
+                <a href="#"> Our Work</a>
               </button>
             </h2>
           </div>
@@ -355,7 +355,7 @@
             <h2 class="accordion-header" id="flush-headingten">
               <button class="accord_btn collapsed" type="" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseseven" aria-expanded="false" aria-controls="flush-collapseseven">
-                <a routerLink="/FAQ">FAQ</a>
+                <a routerLink="/FAQ">FAQs</a>
               </button>
             </h2>
           </div>
