--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -7,7 +7,7 @@
         </h1>
       </section>
       <p class="param">
-        A company that consistently pursues innovative solutions to meet its business needs.
+        A company that consistently pursues innovative solutions to meet its business needs
       </p>
     </div>
   </section>
@@ -145,14 +145,14 @@ Also available in the
       <h1 class="live_header_1">Live Casino</h1>
       <ul class="live_casino_list">
         <li>Live Game Show</li>
-        <li>Awc</li>
+        <li>AWC</li>
         <li>Slots</li>
-        <li>Live roulette </li>
-        <li>Live blackjack</li>
-        <li>Baccarat live</li>
-        <li>Casino Hold’em live</li>
+        <li>Live Roulette </li>
+        <li>Live Blackjack</li>
+        <li>Baccarat Live</li>
+        <li>Casino Hold’em Live</li>
         <li>Supernova</li>
-        <li>Dragon tiger live</li>
+        <li>Dragon Tiger Live</li>
         <li>Andar Bahar</li>
         <li>Teen Patti</li>
       </ul>
@@ -191,9 +191,9 @@ Also available in the
 <section class="integration_sec">
   <div class="integration_row">
     <div class="integration_col">
-      <h1 class="virtual_header">virtual games
+      <h1 class="virtual_header">Virtual Games
       </h1>
-      <h1 class="virtual_header_1">Online and retail
+      <h1 class="virtual_header_1">Online and Retail
       </h1>
       <p class="integration_para">
         Virtual Gaming enables your players to relish the immersive experience of every challenge and bet, bringing the
@@ -206,7 +206,7 @@ Also available in the
       <div class="white_back"></div>
     </div>
     <div class="integration_col_1">
-      <img class="virtual_img" src="assets/virtual-games.png.webp" alt="virtual games">
+      <img class="virtual_img" src="assets/Virtual Games.webp" alt="virtual games">
     </div>
   </div>
 </section>
