--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -3,9 +3,8 @@
     <div class="contact_col">
       <h1 class="contact_header">Contact US</h1>
       <p class="contact_para">
-        Connect with a Vrnl expert for a detailed discussion about how our
-        services might give benefits to your Betting business and create your
-        own strategy.
+        Connect with a Vrnl expert for a detailed discussion about how are
+        services can benefit your betting business and help you create a tailored strategy.
       </p>
       <div class="contact_social">
         <div class="contact_details">
