--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -72,7 +72,7 @@
             </li>
 
             <li>
-              <a class="act" href="#">RM</a>
+              <a class="act" href="#">Risk Management</a>
               <div class="sub_menu">
                 <ul>
                   <li>
@@ -140,7 +140,7 @@
             <li routerLink="/our-theme" >
               <a class="act casino" >Our Work</a>
              </li>
-            <li><a class="act" routerLink="/FAQ">FAQs</a></li>
+            <li><a class="act" routerLink="/FAQ">FAQ</a></li>
             <li><a class="act" routerLink="/contact">Contact Us</a></li>
           </ul>
           </div>
@@ -253,6 +253,24 @@
           </div>
 
           <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree1">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseThree1" aria-expanded="false" aria-controls="flush-collapseThree1">
+                Risk Management
+              </button>
+            </h2>
+            <div id="flush-collapseThree1" class="accordion-collapse collapse" aria-labelledby="flush-headingThree1"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">
+                <a routerLink="/risk-management">Risk Management</a>
+              </div>
+              <div class="accordion-body">
+                <a routerLink="/betting-trade-master">Betting Trade Master</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingFour">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
@@ -340,6 +358,15 @@
               </button>
             </h2>
           </div>
+
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingten">
+              <button class="accord_btn collapsed" type="" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseseven" aria-expanded="false" aria-controls="flush-collapseseven">
+                <a routerLink="/FAQ">FAQ</a>
+              </button>
+            </h2>
+          </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingseven">
               <button class="accord_btn collapsed" type="" data-bs-toggle="collapse"
@@ -351,14 +378,7 @@
         <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
       </div> -->
           </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingten">
-              <button class="accord_btn collapsed" type="" data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseseven" aria-expanded="false" aria-controls="flush-collapseseven">
-                <a routerLink="/FAQ">FAQs</a>
-              </button>
-            </h2>
-          </div>
+        
         </div>
       </div>
     </div>
