--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -21,8 +21,7 @@
           One of the standout features of our solution is its exceptional
           <b class="bold">speed in website creation and deployment</b> Our dedicated team can have your sportsbook website up and running within just ten working days, 
           <b class="bold">tailored precisely to your unique requirements.</b> <br /></p>
-
-         <p>
+<p>
           <b class="bold"> Our service includes specialized hosting</b> ,all the necessary software, live sports odds data feeds, risk management tools, and top-notch customer support services.
         </p>
       </div>
@@ -34,8 +33,7 @@
         />
       </div>
     </div>
-
-    <div class="label-list-para">
+<div class="label-list-para">
       <ul class="label-list1">
         <li>
           Website Development, <b>Branding, Tailoring</b>, and Rigorous Testing of
@@ -56,14 +54,12 @@
       </p>
     </div>
   </section>
-
-  <section class="custom-sec">
+<section class="custom-sec">
     <div class="cutom-main">
       <div class="custom-img">
         <img class="custome_img" src="assets/VRNL 3_11zon.webp" alt="white label customizations" />
       </div>
-
-      <div class="head-custom">
+<div class="head-custom">
         <h1 class="bottom-marg letter-spacing font-weight">Customizations</h1>
         <h2 class="sec-header">Be unique</h2>
         <p>
@@ -83,8 +79,7 @@
         ></div>
       </div>
     </div>
-
-    <div class="plat-odd">
+ <div class="plat-odd">
       <div class="plat-oddhead">
         <h1 class="bottom-marg letter-spacing font-weight">Odds</h1>
         <h2 class="sec-header sec-line">The engine of the platform</h2>
@@ -92,31 +87,23 @@
           We have already
           <b class="bold">
             We have already seamlessly integrated the world's </b> premier odds providers into our system, and if that doesn't suffice for your requirements, we are more than willing to incorporate your preferred choice as well. <br />
-
-          <br />
-          
-        </p>
-        <div
-          class="niva-separator2"
+<br />
+</p>
+<div class="niva-separator2"
           style="
             height: 4px;
             background: #a0c528;
             width: 60px;
-            border-radius: 5px;
-          "
-        ></div>
+            border-radius: 5px;"></div>
       </div>
       <div class="odd-headimg">
         <img
           class="odds_sec_img"
           src="assets/VRNL 3_odds_11zon.webp"
-          alt="white-label-betting-platform"
-        />
+          alt="white-label-betting-platform"/>
       </div>
     </div>
-
-
-    <div class="risk">
+<div class="risk">
       <div class="risk-img">
         <img src="assets/Zero-Risk.png" alt="Zero-Risk" />
       </div>
@@ -128,8 +115,7 @@
         </p>
       </div>
     </div>
-
-    <div class="branding">
+<div class="branding">
       <div class="branding-img">
         <img
           src="assets/sportsbook-branding.jpeg.webp"
@@ -143,23 +129,6 @@
         </p>
       </div>
     </div>
-
-    <!-- <div class="language">
-      <div class="lanimg">
-        <img
-          src="assets/multi-language-multi-currency.jpeg.webp"
-          alt="multi-language-multi-currency"
-        />
-      </div>
-      <div class="lanhead">
-        <h1>Multi Language and Multi Currency</h1>
-        <h2>Internationalization - i18N</h2>
-        <p>
-          You can easily choose the language and currency you want to display
-          on the platform, including <a href=""> crypto currencies.</a>
-        </p>
-      </div>
-    </div> -->
-  </section>
+</section>
 </div>
 <app-footer></app-footer>
