--- a/src/app/our-theme/our-theme.component.css
+++ b/src/app/our-theme/our-theme.component.css
@@ -1,7 +1,3 @@
-
-
-
-
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
@@ -11,7 +7,6 @@ body {
     height: 100vh;
     margin: 0;
 }
-
 .card {
     width: 250px;
     height: 300px;
@@ -21,12 +16,9 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s, box-shadow 0.3s;
-    /* margin-left: 100px; */
     justify-content: center;
     margin: 0 auto;
-
 }
-
 .card::before {
     content: "";
     position: absolute;
@@ -39,16 +31,13 @@ body {
     transform: skewX(-45deg) translateX(-100%);
     transition: transform 0.3s;
 }
-
 .card:hover {
     transform: scale(1.05);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
-
 .card:hover::before {
     transform: skewX(-45deg) translateX(100%);
 }
-
 .card-content {
     padding: 20px;
     text-align: center;
@@ -62,17 +51,14 @@ body {
     transition: transform 0.3s;
     height: 35%;
 }
-
 .card:hover .card-content {
     transform: translateY(0);
 }
-
 h2 {
     font-size: 14px;
     margin: 0;
     padding-bottom: 20px;
 }
-
 p {
     font-size: 16px;
     margin: 10px 0;
@@ -109,7 +95,6 @@ p {
     margin-top: 139px;
     width: 50%;
 }
-
 .logo2{
     width: 170px !important;
 }
@@ -137,16 +122,13 @@ p {
 .logo10{
     width: 200px !important;
 }
-
-
-
 @media (max-width: 768px) {
     .container {
         grid-template-columns: repeat(2, minmax(170px, 2fr)); /* Display two columns on mobile screens */
         gap: 0px;
 
-    }
-    .card {
+}
+.card {
         width: 150px;
         height: 200px;
     }
@@ -180,8 +162,7 @@ p {
     .logo10{
         width: 127px !important;
     }
-  
-    .logoname{
+  .logoname{
         font-size: 23px;
     }
 }
@@ -218,31 +199,25 @@ p {
     font-size: 24px !important;
 }
 }
-
-
 .container1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* align-items: center; */
     padding: 20px;
     font-family: 'Poppins';
 
 }
-
 .left-content {
     flex: 1;
     padding: 20px;
     line-height: 1.8;
 }
-
 .right-images {
     flex: 1;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
-
 .right-images img {
     max-width: 100%;
 }
@@ -253,16 +228,14 @@ p {
 font-size: 15px;
 margin-left: 20px;
 }
-/* Responsive Styles */
 @media (max-width: 768px) {
     .container {
         flex-direction: column;
         text-align: center;
     }
-
-    .left-content,
+.left-content,
     .right-images {
-        flex: none; /* Reset flex to none for stacking on small screens */
+        flex: none; 
         width: 100%;
     }
     .card-content {
@@ -298,21 +271,16 @@ margin-left: 20px;
     font-family: Poppins;
     margin-top: 20px;
 }
-
-
 .container_row{
     display: flex;
     justify-content: center;
 
 }
-
 .container_col{
     width: 30%;
-   
     margin-top: 139px;
     margin-left: 75px;
 }
-
 .theme_card{
     width: 98%;
     background: #A0C228;
@@ -320,26 +288,21 @@ margin-left: 20px;
    font-size: 16px;
     margin-top: 30px;
 }
-
 .theme_card:hover{
     box-shadow: 10px 10px 5px rgb(88, 88, 88);
 
 }
-
 .theme_card_container{
     padding: 16px;
 
 }
-
 .theme_p{
 font-size: 18px;
 color: white;
 font-weight: 350;
-
 }
 .theme_h{
     color: white;
     font-size: 18px;
-   
-    font-weight: 500;
+   font-weight: 500;
 }
