--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -105,7 +105,7 @@
 <section>
     <div class="easy-setup-main">
         <div class="easy-setup-col1-photo">
-<img src="assets/VRNL 1-1.jpg" alt="setup and creation of the online networks">
+<img src="assets/VRNL 1-1_11zon.jpg" alt="setup and creation of the online networks">
         </div>
 
         <div class="easy-setup-col2">
@@ -134,7 +134,7 @@
             </div>
         </div>
         <div class="esports-betting-middle-row2">
-<img class="all_images" src="assets/vrnl image 10.webp" alt="eSports Betting environmen">
+<img class="all_images" src="assets/vrnl image 10_11zon.webp" alt="eSports Betting environmen">
         </div>
 
     </div>
