--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -48,7 +48,7 @@
 
         <img
         class="types_images"
-        src="assets/vrnl image 4 (1).webp"
+        src="assets/vrnl image 4 (1)_11zon.webp"
         alt="Types of sportsbook iframe"
       />
       </div>
