--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="container2-col2">
-        <img class="container_imgs" src="assets/vrnl 26_data.webp" alt="Live Casino providers" />
+        <img class="container_imgs" src="assets/vrnl 26_data_11zon.webp" alt="Live Casino providers" />
       </div>
     </div>
   </section>
