--- a/src/app/betting-trade-master/betting-trade-master.component.html
+++ b/src/app/betting-trade-master/betting-trade-master.component.html
@@ -111,7 +111,7 @@
       <div class="casino_col_2">
         <img
           class="casino_sec_img2"
-          src="assets/vrnl online c.webp"
+          src="assets/vrnl online c_11zon.webp"
           width="840"
           height="700"
           alt="Online Casino"
