--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -71,7 +71,7 @@
 
 
         <div class="right-img-index3">
-            <img src="assets/vrnl image 10.webp" alt="our Platform">
+            <img src="assets/vrnl image 10_11zon.webp" alt="our Platform">
 
         </div>
     </div>
