--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -52,7 +52,7 @@
     <div class="sportsbetting-mainfeature-col1">
       <img
         class="sport_images_1"
-        src="assets/vrnl image 4 (1).webp"
+        src="assets/vrnl image 4 (1)_11zon.webp"
         alt="Sports Betting software"
       />
     </div>
@@ -124,7 +124,7 @@
     <div class="sportsbetting-benefits-image">
       <img
         class="images_benefit_1"
-        src="assets/vrnl image 52.png"
+        src="assets/vrnl image 52_11zon.png"
         alt="complete Sports betting software"
       />
     </div>
@@ -227,7 +227,7 @@
       </p>
     </div>
     <div class="sportsbetting-betting-software-col2">
-      <img class="addverties_img" src="assets/vrnl online c.webp" alt="Betting software" />
+      <img class="addverties_img" src="assets/vrnl online c_11zon.webp" alt="Betting software" />
     </div>
   </div>
 </section>
