--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -118,7 +118,7 @@
             formControlName="country"
               type="text"
               aria-labelledby="country_selector-label"
-              id="country-input"
+              id="Country"
               name="countries"
               value=""
               required
@@ -144,7 +144,7 @@
             <input
             formControlName="number"
               value=""
-              id="phone"
+              id="number"
               type="tel"
               name="phone"
               required
@@ -168,7 +168,7 @@
               required
               fmessage
               
-              id="text-input"
+              id="Message"
             
             ></textarea>
           </div>
