--- a/src/app/risk-management/risk-management.component.html
+++ b/src/app/risk-management/risk-management.component.html
@@ -4,7 +4,7 @@
     <div class="main_sec">
       <section class="typing-container">
         <h1 class="home_header_h1 headerh1">
-            AI-SafeBet: Smart Risk Management for Sportsbooks Artificial Intelligence  <span class="typing-text"></span>
+             Smart Risk Management for Sportsbooks Artificial Intelligence  <span class="typing-text"></span>
         </h1>
       </section>
       <p class="param1">
@@ -16,9 +16,9 @@
   <section class="platform_sec">
     <div class="platform_row">
       <div class="platform_col">
-        <h1 class="platform_header">Smart Risk Management</h1>
+        <h1 class="platform_header">Dedicated Risk Management Team</h1>
         <p class="platform_para1">
-            AI-SafeBet is an advanced AI-based risk management tool designed specifically for Sportsbook operators. It offers efficient detection of false, double, or suspicious bets, protecting your business from potential fraudulent betting activities and financial losses.
+          We have a dedicated and highly experienced risk management team that operates 24/7. Their primary role is to monitor every bet and transaction on our platform to ensure fair play and safety for all users.
         </p>
        
        
@@ -51,16 +51,16 @@
     <div class="whites_row">
       <div class="whites_col">
         <h2 class="white_header1">
-            AI-SafeBet: Key Features
+           Key Features
         </h2>
         <div class="wpb_wrapper">
 			<ul>
-<li><span style="font-weight: 400;"><strong>Fraud Detection:</strong> Our AI system accurately identifies false, duplicate, or suspicious bets to safeguard your sportsbook operations.</span></li>
-<li><strong>Real-time Risk Assessment:</strong> AI-SafeBet provides real-time analysis and reporting of potential risks, allowing operators to make timely and informed decisions.</li>
-<li><strong>Machine Learning Capability:</strong> The AI system continually learns from every bet, adapting to new betting strategies and patterns for improved fraud protection.</li>
-<li><strong>User-friendly Interface:</strong> Easily monitor and manage risks through our intuitive and user-friendly dashboard.</li>
-<li><strong>Customizable Alerts:</strong> Set up personalized notifications to monitor specific events or risk thresholds.</li>
-<li><strong>Data Protection:</strong> No customer data is shared with third parties. We prioritize security and confidentiality.</li>
+<li><span style="font-weight: 400;"><strong> Real-Time Monitoring:</strong>Our cutting-edge technology and real-time monitoring systems continuously track all activities on our platform. This includes bets, odds changes, and user behavior.</span></li>
+<li><strong>Manual Review:</strong> When alerts are triggered, our risk team conducts a thorough manual review. They analyze betting patterns, odds fluctuations, and account behaviors to determine if further action is needed.</li>
+<li><strong>Risk Mitigation:</strong> If any irregularities or risks are identified, we take immediate action to mitigate those risks. This may involve voiding or suspending bets, freezing accounts, or requesting additional verification from users.</li>
+<li><strong>Data Analysis:</strong> We regularly analyze data to identify trends and patterns that may indicate risks. Historical data is also used to enhance our risk assessment and prevention strategies.</li>
+<li><strong>Incident Response Plan:</strong> We have a comprehensive incident response plan in place to address various types of risks, including security breaches, cheating, or other incidents. This plan outlines procedures for handling such events efficiently.</li>
+<!-- <li><strong>Data Protection:</strong> No customer data is shared with third parties. We prioritize security and confidentiality.</li> -->
 </ul>
 
 		</div>
@@ -71,7 +71,7 @@
       <div class="whites_col_1">
         <img
           class="whites_sec_img2 ai-img2"
-          src="assets/ai-safebet_key-features.jpg"
+          src="assets/Ai safe bet key features.png"
           width="543"
           height="317"
           alt="White Label Solutions"
@@ -85,21 +85,22 @@
       <div class="gaming_col">
         <img
           class="gaming_img ai-img3"
-          src="assets/ai-benefits-scaled.webp"
+          src="assets/Ai Benefits.png"
           width="520"
           height="325"
           alt="iGaming Platform"
         />
       </div>
       <div class="gaming_col_2">
-        <h1 class="gaming_header">AI: Benefits</h1>
+        <h1 class="gaming_header"> Benefits</h1>
         <div class="wpb_wrapper">
 			<ul>
-<li><span style="font-weight: 400;"><strong>Reduce Financial Loss:</strong> Minimize potential losses from fraudulent betting activities.</span></li>
-<li><strong>Efficient Operations:</strong> Enhance operational efficiency with automated and accurate risk assessment.</li>
-<li><strong>Decision Support:</strong> Improve decision-making process with real-time insights and data-driven reports.</li>
-<li><strong>Cost Saving:</strong> Decrease manpower costs by automating the bet scrutiny process.</li>
-<li><strong>Customer Trust:</strong> Build and maintain customer trust by ensuring a fair and transparent betting environment.</li>
+<li><span style="font-weight: 400;"><strong>Ongoing Training:</strong> Our risk team receives continuous training to stay updated on the latest threats and best practices in the industry. This ensures they are well-prepared to address any challenges.</span></li>
+<li><strong>Advanced Technology and Security:</strong> We regularly invest in and upgrade our platform's technology and security measures. This includes regular penetration testing, software updates, and security audits.</li>
+<li><strong>Transparency and Communication:</strong> We believe in maintaining open and transparent communication with our users. Any actions taken as part of risk management are communicated clearly to build trust and confidence.</li>
+<li><strong>Continuous Improvement:</strong> Our risk management system is continuously evolving. We learn from past incidents and emerging threats to evaluate and improve our strategies.
+  By following these meticulous steps, we are committed to providing a safe, secure, and fair environment for all our users. Our priority is to ensure the integrity of our platform and to protect user interests.</li>
+<!-- <li><strong>Customer Trust:</strong> Build and maintain customer trust by ensuring a fair and transparent betting environment.</li> -->
 </ul>
 
 		</div>
