--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,34 +8,35 @@
 		<ul id="side-cs-cont" class="contact-service-list">
 			<li id="cs-145" class="icon-fb">
 				<a target="_blank" href="https://www.facebook.com/people/Jack-Harris/pfbid02zB4x4iS12KXrQbTqepGxwWwtG1buPgyyzc5Ppiqh3vc2mL9woipxQFsZh319pvjNl/">
-					<img src="assets\icons8-facebook.gif"alt="Facebook">
+					<img  src="assets/icons8-facebook.gif" alt="Visit our Facebook page">
+
 					<span ui-key="displayText">Facebook</span>
 				</a><hr>
 			</li>
 			<li id="cs-45" class="icon-mail">
 				<a target="_blank" href="https://www.instagram.com/vrnl_official/">
-					<img src="assets\icons8-instagram.gif"alt="instagram">
+					<img src="assets\icons8-instagram.gif"alt="Visit our instagram page">
 					<span ui-key="displayText">instagram</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank" href="https://t.me/Johnmark1974">
-					<img src="assets\icons8-telegram.gif" ui-key="realIconPath"alt="Telegram">
+					<img src="assets\icons8-telegram.gif" ui-key="realIconPath" alt="Visit our telegram page">
 					<span ui-key="displayText">Telegram</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank" href="https://twitter.com/VRNLOFFICIAL">
-					<img src="assets/icons8-twitter-circled.gif" ui-key="realIconPath"alt="Telegram">
+					<img src="assets/icons8-twitter-circled.gif" ui-key="realIconPath" alt="Visit our twitter page">
 					<span ui-key="displayText">Twitter</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank" href="skype:live:9960f32f776599a2?chat">
-					<img src="assets\icons8-skype.gif" ui-key="realIconPath" alt="skype">
+					<img src="assets\icons8-skype.gif" ui-key="realIconPath" alt="Visit our skype page">
 					<span ui-key="displayText">skype</span></a><hr>
 			</li>
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank"
 					href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0" >
-					<img src="assets/whatsapp-gif.gif" ui-key="realIconPath" alt="whatsapp">
+					<img src="assets/whatsapp-gif.gif" ui-key="realIconPath" alt="Visit our whatsapp page">
 					<span ui-key="displayText">whatsapp</span></a><hr>
 			</li>
 		</ul>
