--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -42,7 +42,7 @@
 
       <div class="company_about com">
         <h1 class="comp_header">Company</h1>
-        <div><p class="comp_list"><a routerLink="/about-us" aria-label="About">About Us</a></p></div>
+        <div><p class="comp_list"><a  routerlink="/about-us" aria-label="About" ng-reflect-router-link="/about-us" href="#/about-us">About</a></p></div>
         <div><p class="comp_list"><a routerLink="/online-sportsbook-software" aria-label="Provider">sportsbook Provider</a></p></div>
         <div>
           <a routerLink="/privacy-policy"><p class="comp_list" aria-label="Privacy">Privacy Policy</p></a>
