--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -129,7 +129,7 @@
               <div class="sub_menu">
                 <ul>
                   <!-- <li><a routerLink="/demo-sportsbook">Demo</a></li> -->
-                  <li><a routerLink="/about-us">About us</a></li>
+                  <li><a routerLink="/about-us" aria-label="About">About us</a></li>
                   <li>
                     <a routerLink="/online-sportsbook-software">Online sportsbook software</a>
                   </li>
@@ -138,10 +138,11 @@
               </div>
             </li>
             <li routerLink="/our-theme" >
-              <a class="act casino" >Our Work</a>
+              <a href="#" class="act casino">Our Work</a>
              </li>
             <li><a class="act" routerLink="/FAQ">FAQ</a></li>
-            <li><a class="act" routerLink="/contact">Contact Us</a></li>
+            <li><a  routerlink="/contact" aria-label="Contact" class="act" ng-reflect-router-link="/contact" href="#/contact">Contact</a>
+            </li>
           </ul>
           </div>
         </div>
@@ -291,7 +292,7 @@
             <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix"
               data-bs-parent="#accordionFlushExample">
               <div class="accordion-body">
-                <a routerLink="/about-us">About Us</a>
+                <a routerLink="/about-us" aria-label="About">About Us</a>
               </div>
               <div class="accordion-body">
                 <a routerLink="/online-sportsbook-software">Online sportsbook Software</a>
