--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -21,12 +21,14 @@
       <div class="contact_social">
         <div class="contact_details">
           <div class="row_col">
-        <img
+            
+              <img
                 class="whats_img"
                 src="assets/Whatsapp.webp"
                 alt="whatsapp"
               />
-           </div>
+        
+          </div>
           <div class="row_col_1">
             <div class="row_2">
               <a href="https://wa.me/+91826808838" target="_blank">
@@ -116,7 +118,7 @@
             formControlName="country"
               type="text"
               aria-labelledby="country_selector-label"
-              id="Country"
+              id="country-input"
               name="countries"
               value=""
               required
@@ -142,7 +144,7 @@
             <input
             formControlName="number"
               value=""
-              id="number"
+              id="phone"
               type="tel"
               name="phone"
               required
@@ -166,7 +168,7 @@
               required
               fmessage
               
-              id="Message"
+              id="text-input"
             
             ></textarea>
           </div>
@@ -182,6 +184,8 @@
 
             <span class="wpcf7-spinner" *ngIf="loder"></span>
           </div>
+          <!-- <div class="wpcf7-response-output error" aria-hidden="true"  *ngIf="contactForm.invalid && (contactForm.touched || contactForm.dirty)">One or more fields have an error. Please check and try
+            again.</div> -->
         </form>
       </div>
       <p class="con_param">
