--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -87,7 +87,7 @@
             formControlName="from_email"
               type="text"
               id="email"
-          
+              autocomplete="off"
               name="femail"
               value=""
               onkeypress="myFunction()"
@@ -114,6 +114,7 @@
           <div class="email_input">
             <input
             formControlName="country"
+            autocomplete="country"
               type="text"
               aria-labelledby="country_selector-label"
               id="Country"
