--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -124,7 +124,7 @@
       <div class="white_back"></div>
     </div>
     <div class="casino_col_2">
-      <img class="casino_sec_img2" src="assets/vrnl online c_11zon.webp" width="840" height="700" alt="Online Casino" />
+      <img class="casino_sec_img2" src="assets/vrnl online c_11zon (1).webp" width="840" height="700" alt="Online Casino" />
     </div>
   </div>
 </section>
