--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -119,7 +119,7 @@
             autocomplete="country"
               type="text"
               aria-labelledby="country_selector-label"
-              id="country-input"
+              id="Country"
               name="countries"
               value=""
               required
@@ -138,7 +138,7 @@
           <!-- <========country number end============> -->
 
           <div class="email_label">
-            <label for="number"><b>Phone Number</b></label>
+            <label for="phone"><b>Phone Number</b></label>
           </div>
           <div class="iti">
           <div class="email_input">
@@ -169,7 +169,7 @@
               required
               fmessage
               
-              id="text-input"
+              id="Message"
             
             ></textarea>
           </div>
