--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -176,7 +176,7 @@
       </p>
     </div>
     <div class="sportsbetting-betting-software-col2">
-      <img class="addverties_img" src="assets/vrnl online c_11zon.webp" alt="Betting software" />
+      <img class="addverties_img" src="assets/vrnl online c_11zon (1).webp" alt="Betting software" />
     </div>
   </div>
 </section>
