--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -1100,3 +1100,22 @@ margin-top: 2px !important;
     width: 487px;
     height: 467px;
 }
+
+@media only screen and (max-width: 1024px) and (min-width: 950px){
+
+ 
+    .home_header_h1{
+width: 61% !important;
+    }
+    .gaming_col{
+width: 55% !important;
+
+    }
+    .live_col{
+width: 76% !important;
+    }
+
+    .integration_col{
+width: 55% !important;
+    }
+  }
