--- a/src/app/risk-management/risk-management.component.html
+++ b/src/app/risk-management/risk-management.component.html
@@ -4,7 +4,8 @@
     <div class="main_sec">
       <section class="typing-container">
         <h1 class="home_header_h1 headerh1">
-             Smart Risk Management for Sportsbooks Artificial Intelligence  <span class="typing-text"></span>
+          Your Bets, Our Responsibility Unbeatable Risk Management
+          Uncompromising Protection for  <span class="typing-text"></span>
         </h1>
       </section>
       <p class="param1">
@@ -111,7 +112,7 @@
     </div>
   </section>
 
-
+<!-- 
 
   <div class="wpb_wrapper3"><h2 class="wpb_wrapper5" style="color: #a0c528;line-height: 45px;text-align: center">Ai-SafeBet is Ideal For:</h2>
 	<div class="wpb_text_column wpb_content_element ">
@@ -261,7 +262,7 @@
       </div>
     </div>
   </section>
-
+ -->
 
 
 
