--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -41,7 +41,7 @@
       <img class="platform_img" src="assets/vrnl_img_up.webp" width="544" height="310"
         alt="One Platform, many solutions">
       <div class="platform_you_tube">
-        <a href="#" aria-label="youtube image"><img class="you_img" src="assets/play.png.webp" width="520" height="291" alt="youtube" /></a>
+        <a href="#" aria-label="youtube link"><img class="you_img" src="assets/play.png.webp" width="520" height="291" alt="youtube" /></a>
       </div>
     </div>
   </div>
