--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -8,7 +8,7 @@
         </h1>
         <div class="wpb_text_column wpb_content_element  vc_custom_1673977594688">
           <div class="wpb_wrapper">
-            <p>Our  <strong>online casino softwar</strong> is designed for simplicity, making it easy to manage. We ensure your competitiveness by offering a wide selection of thousands of casino games. Our dedicated staff will provide comprehensive support throughout every stage of the process, from initial training to the launch of your casino.</p>
+            <p>Our  <strong>online casino software</strong> is designed for simplicity, making it easy to manage. We ensure your competitiveness by offering a wide selection of thousands of casino games. Our dedicated staff will provide comprehensive support throughout every stage of the process, from initial training to the launch of your casino.</p>
             <p>Our marketing team will work diligently to ensure that your online casino receives prominent placement on the front page, guaranteeing high visibility in the online market.</p>
             <p> online casino platform will come equipped with a variety of pre-configured games, and our monitoring tools will provide you with a clear, real-time overview of the progress and performance of your new venture.</p>
             <p>&nbsp;</p>
