--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -15,11 +15,11 @@
 </p>
 <h3>Try our B2B Betting software</h3>
       <div class="sportsbetting-section1-col1-link">
-        <a href="https://www.rex.games/" target="_blank" style="font-size: 16px"
+        <a href="https://www.betskyexch.com/" target="_blank" style="font-size: 16px"
           >https://www.betskyexch.com/</a>
 </div><h3>Try our B2C Betting software</h3>
       <div class="sportsbetting-section1-col1-link">
-        <a href="https://www.sirplay.bet/" target="_blank" style="font-size: 16px"
+        <a href="https://cricbuzzer.io/" target="_blank" style="font-size: 16px"
           >https://cricbuzzer.io/</a>
       </div>
 <div class="sportsbetting-section1-button" >
