--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -144,7 +144,7 @@ Online player, register your game account online or at a shop, place bets.
                       </div>
                     </div>
 
-                    <div class="accordion-item">
+                    <!-- <div class="accordion-item">
                       <h2 class="accordion-header" id="headingEight">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
                           What is Sports Betting Software?
@@ -158,7 +158,7 @@ Online player, register your game account online or at a shop, place bets.
 
                         </div>
                       </div>
-                    </div>
+                    </div> -->
 
                     
                     <div class="accordion-item">
