--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -661,8 +661,9 @@ flex-wrap: wrap;
   .loc1{
     font-size: 20px;
   color: #ec0e0e; 
-  margin-top: -25px;
-  margin-left: -2px;
+  position: absolute;
+  top: -27px;
+  left: -3px;
   }
 
 
