--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -206,8 +206,9 @@ text-rendering: auto;
 .loc1{
   font-size: 20px;
 color: #ec0e0e; 
-margin-top: -25px;
-margin-left: -2px;
+position: absolute;
+top: -27px;
+left: -3px;
 }
 
 
