--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -3,7 +3,7 @@
     <nav>
       <div class="hader_row">
        
-        <img class="images_logo" src="assets/VRNL new LOGO copy.png" routerLink="/">
+        <img class="images_logo" src="assets/VRNL new LOGO copy.png" routerLink="/" alt="logo">
         
         <div class="nav_col_1">
           <ul class="nav_col_2">
@@ -71,7 +71,7 @@
 <div class="responsive_nav">
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="assets/VRNL new LOGO copy.png"></a>
+      <a class="navbar-brand" href="#"><img src="assets/VRNL new LOGO copy.png" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
