--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -57,7 +57,7 @@
 <section class="custom-sec">
     <div class="cutom-main">
       <div class="custom-img">
-        <img class="custome_img" src="assets/VRNL 3_11zon.webp" alt="white label customizations" />
+        <img class="custome_img" src="assets/VRNL 3_11zon.webp" alt="white label customizations" width="328" height="234" />
       </div>
 <div class="head-custom">
         <h1 class="bottom-marg letter-spacing font-weight">Customizations</h1>
@@ -105,7 +105,7 @@
     </div>
 <div class="risk">
       <div class="risk-img">
-        <img src="assets/Zero-Risk.png" alt="Zero-Risk" />
+        <img src="assets/Zero-Risk.png" alt="Zero-Risk" width="90" height="90" />
       </div>
       <div class="risk-para">
         <h1>Zero risk</h1>
@@ -119,7 +119,7 @@
       <div class="branding-img">
         <img
           src="assets/sportsbook-branding.jpeg.webp"
-          alt="sportsbook-branding"
+          alt="sportsbook-branding" width="250" height="129"
         />
       </div>
       <div class="branding-head">
