--- a/src/app/footers2/footers2.component.html
+++ b/src/app/footers2/footers2.component.html
@@ -3,25 +3,25 @@
         <div class="footer_row">
             <div class="footer_col">
             <a target="_blank" href="https://www.gamblingcommission.gov.uk">
-            <img src="https://b2c.static112233.com/assets/images/gamblingcomm.png"   class="comp_1"/>
+            <img src="https://b2c.static112233.com/assets/images/gamblingcomm.png"  alt="gamblingcomm" class="comp_1"/>
             </a>
                  
             </div>
             <div class="footer_col_1">
                 <a  target="_blank" href="https://gordonmoody.org.uk/">
-                    <img class="comp_1" src="https://b2c.static112233.com/assets/images/gordonmoody.png"  />
+                    <img class="comp_1" src="https://b2c.static112233.com/assets/images/gordonmoody.png"  alt="gordonmoody" />
                   </a>
 
             </div>
             <div class="footer_col_2">
                 <a   target="_blank" href="https://www.gamcare.org.uk/get-support/talk-to-us-now/">
-                    <img class="comp_1"  src="https://b2c.static112233.com/assets/images/gamecare.png"
+                    <img class="comp_1"  src="https://b2c.static112233.com/assets/images/gamecare.png"  alt="gamecare"
                    />
                   </a>
             </div>
             <div class="footer_col_3">
                 <a   target="_blank" href="https://betblocker.org/">
-                    <img class="comp_1"  src="https://b2c.static112233.com/assets/images/betblocker.png"
+                    <img class="comp_1"  src="https://b2c.static112233.com/assets/images/betblocker.png"  alt="betblocker"
                      />
                   </a>
 
