--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -3,13 +3,13 @@
     <nav>
       <div class="hader_row">
        
-        <img class="images_logo" src="assets/VRNL new LOGO copy.png" routerLink="/">
+        <img class="images_logo" src="assets/VRNL new LOGO copy.png" alt="logo" routerLink="/">
         
         <div class="nav_col_1">
           <ul class="nav_col_2">
-            <li><a routerLink="/white-label-betting-platform"> WHITE LABEL SPORTSBOOK </a> </li>
+            <li  routerLink="/white-label-betting-platform"><a href="#"> WHITE LABEL SPORTSBOOK </a> </li>
 
-            <li><a href="">WHITE LABEL CASINO </a> <i class="fa-solid fa-angles-down"></i>
+            <li><a href="#">WHITE LABEL CASINO </a> <i class="fa-solid fa-angles-down"></i>
               <div class="sub_menu">
                 <ul>
                   <li> <a routerLink="/casino/casino-games"> Casino games</a></li>
@@ -33,7 +33,7 @@
         </div>
     
     </li> -->
-            <li><a href=""> COMPANY </a> <i class="fa-solid fa-angles-down"></i>
+            <li><a href="#"> COMPANY </a> <i class="fa-solid fa-angles-down"></i>
 
               <div class="sub_menu">
                 <ul>
@@ -71,7 +71,7 @@
 <div class="responsive_nav">
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="assets/VRNL new LOGO copy.png"></a>
+      <a class="navbar-brand" href="#"><img src="assets/VRNL new LOGO copy.png" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -82,8 +82,8 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accord_btn collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                  <a routerLink="/white-label-betting-platform"> WHITE LABEL SPORTSBOOK </a>
+                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne" routerLink="/white-label-betting-platform">
+                  <a href="#"> WHITE LABEL SPORTSBOOK </a>
                 </button>
               </h2>
             </div>
