--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -9,7 +9,7 @@
           <ul class="nav_col_2">
             <li><a routerLink="/white-label-betting-platform"> WHITE LABEL SPORTSBOOK </a> </li>
 
-            <li><a href="">WHITE LABEL CASINO </a> <i class="fa-solid fa-angles-down"></i>
+            <li><a href="#">WHITE LABEL CASINO </a> <i class="fa-solid fa-angles-down"></i>
               <div class="sub_menu">
                 <ul>
                   <li> <a routerLink="/casino/casino-games"> Casino games</a></li>
@@ -33,7 +33,7 @@
         </div>
     
     </li> -->
-            <li><a href=""> COMPANY </a> <i class="fa-solid fa-angles-down"></i>
+            <li><a href="#"> COMPANY </a> <i class="fa-solid fa-angles-down"></i>
 
               <div class="sub_menu">
                 <ul>
@@ -83,7 +83,7 @@
               <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accord_btn collapsed" type="button" data-bs-toggle="collapse"
                   data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                  <a routerLink="/white-label-betting-platform"> WHITE LABEL SPORTSBOOK </a>
+                  <a routerLink="/white-label-betting-platform" href="#"> WHITE LABEL SPORTSBOOK </a>
                 </button>
               </h2>
             </div>
