--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -76,7 +76,7 @@
         
           
               </ul>
-              <img src="assets/vrnl-market_2022-1-768x369 2.png" alt="map" />
+              <img src="assets/vrnl-market_2022-1-768x369 2.webp" alt="map" />
         
             </div>
       </div>
@@ -198,7 +198,7 @@ We take pride in presenting our clients with the widest selection of games withi
                   </a>
 
                   <a href="https://www.9ex365.bet/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/ex3659.png" alt="ex3659" class="img-fluid partner-image copy">
+                    <img src="assets/ex3659.webp" alt="ex3659" class="img-fluid partner-image copy">
                   </a>
                 </div>
 
@@ -259,7 +259,7 @@ We take pride in presenting our clients with the widest selection of games withi
                   </a>
 
                   <a href="https://auraexch.live/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/aura.png" alt="aura" class="img-fluid partner-image copy">
+                    <img src="assets/aura.webp" alt="aura" class="img-fluid partner-image copy">
                   </a>
                 </div>
 
@@ -337,7 +337,7 @@ We take pride in presenting our clients with the widest selection of games withi
                   </a>
 
                   <a class="box" href="https://www.9ex365.bet/#/dash" target="_blank">
-                    <img src="assets/partner-logo-new/ex3659.png" alt="ex3659" class="img-fluid partner-image copy">
+                    <img src="assets/ex3659.webp" alt="ex3659" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.betguru.win/#/dash" target="_blank">
@@ -357,7 +357,7 @@ We take pride in presenting our clients with the widest selection of games withi
                   </a>
 
                   <a class="box" href="https://auraexch.live/#/home" target="_blank">
-                    <img src="assets/partner-logo-new/aura.png" alt="aura" class="img-fluid partner-image copy">
+                    <img src="assets/aura.webp" alt="aura" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href=" https://www.bazi365.live/#/dash" target="_blank">
