--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -1,7 +1,7 @@
 
 <header class="header">
   
-    <img class="images_logo" src="assets/VRNL new LOGO copy.png" routerLink="/">
+    <img class="images_logo" src="assets/VRNL new LOGO copy.webp" routerLink="/">
 
 
   <nav class="navbar">
