--- a/src/app/risk-management/risk-management.component.css
+++ b/src/app/risk-management/risk-management.component.css
@@ -3,7 +3,7 @@
  #animate-area { 
     width: 100%; 
     height: 400px; 
-    background-image: url('../../assets/Untitled-4.png');
+    background-image: url('../../assets/Untitled-4.webp');
   background-size: cover ;
 }
 .main_sec{
