--- a/src/app/risk-management/risk-management.component.html
+++ b/src/app/risk-management/risk-management.component.html
@@ -72,7 +72,7 @@
       <div class="whites_col_1">
         <img
           class="whites_sec_img2 ai-img2"
-          src="assets/Ai safe bet key features.png"
+          src="assets/Ai safe bet key features-min.webp"
           width="543"
           height="317"
           alt="White Label Solutions"
@@ -86,7 +86,7 @@
       <div class="gaming_col">
         <img
           class="gaming_img ai-img3"
-          src="assets/Ai Benefits.png"
+          src="assets/Ai Benefits-min.webp"
           width="520"
           height="325"
           alt="iGaming Platform"
