--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <app-scroll-btn></app-scroll-btn>
 <div class="side-slider contact-service-box">
 	<button class="slide-btn">
-		<img src="assets\24hrcall.png" alt="contact">
+		<img src="assets/24hrcall.webp" alt="contact">
 	</button>
 	<div class="side-slider-content">
 		<ul id="side-cs-cont" class="contact-service-list">
