--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -1,7 +1,7 @@
 #animate-area { 
     width: 100%; 
     height: 400px; 
-    background-image: url('../../assets/Untitled-4.png');
+    background-image: url('../../assets/Untitled-4.webp');
   background-size: cover ;
 }
 
