--- a/src/app/header2/header2.component.html
+++ b/src/app/header2/header2.component.html
@@ -70,8 +70,8 @@
 </div>
 <div class="responsive_nav">
   <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="assets/VRNL new LOGO copy.webp" alt="logo"></a>
+    <div class="container-fluid" >
+      <a class="navbar-brand" href="#" aria-label="logo" ><img src="assets/VRNL new LOGO copy.webp" alt="logo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
