--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -25,7 +25,7 @@
     <section class="whites_label_sec">
         <div class="whites_c_row whites_label">
             <div class="white_f_col">
-    <img class="tv_image" src="assets/vrnl crypto tv2 (1).jpg" alt="White label casino">
+    <img class="tv_image" src="assets/vrnl crypto tv2 (1).webp" alt="White label casino">
             </div>
             <div class="white_f_col_1">
     <h1 class="white_c_header">White label casino <span style="font-weight:100">Main features</span></h1>
@@ -48,7 +48,7 @@
     <div class="white_b_row">
      <div class="whites_content">
     <h1 class="whites_h1">Which will be the benefits?</h1>
-    <h3 class="whites_h3">Let us Explain</h3>
+    <h2 class="whites_h3">Let us Explain</h2>
    <p class="whites_param"> <span class="head_para">If you're considering entering the Online Gambling business, a <strong style="color: rgb(87 87 86);">casino White Label solution could be your stepping stone.</strong></span> </p>
 <p class="param_fea">
     Leverage our professional services and expertise, in addition to our <strong>Casino platforms</strong> and cutting-edge technology. Our regulated partners receive comprehensive support to embark on their journey into the online Casino industry, and they have the option of branded or non-branded versions of our platforms.</p>
