--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -74,7 +74,7 @@
           
             
                 </ul>
-                <img src="assets/vrnl-market_2022-1-768x369 2.png" alt="map" />
+                <img src="assets/vrnl-market_2022-1-768x369 2.webp" alt="map" />
           
               </div>
        
